Fixes #18401: Empty space in Directives header

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -37,7 +37,7 @@
 #editForm {
   display: flex;
   flex-direction: column;
-  height: calc(100% - 50px);
+  height: 100%;
 }
 #headerBar ~ .content-wrapper #editForm{
   height: calc(100VH - 80px);
