--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
@@ -41,8 +41,7 @@
           </div>
         </lift:authz>
       </div>
-      <div class="header-description">
-        <p id="shortDescription"></p>
+      <div class="header-description" id="shortDescription">
       </div>
     </div>
     <div class="main-navbar" id="navbar-scrollspy">
