--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-healthcheck.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-healthcheck.css
@@ -90,3 +90,22 @@
   border-color: #337ab7;
   color: #337ab7;
 }
+
+.circle {
+  width                : 20px;
+  height               : 20px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius   : 10px;
+  border-radius        : 10px;
+  float                : right;
+  margin-left          : 10px;
+}
+.ok-light {
+  background-color: #81D674;
+}
+.warning-light {
+  background-color: #F08004;
+}
+.critical-light {
+  background-color: #C80003;
+}
