Fixes #18604: Make capitalization in directove form tabs consistent

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
@@ -58,7 +58,7 @@
         </li>
         <li class="ui-tabs-tab" role="presentation">
           <a href="#directiveRulesTabTitle" onclick="navScroll(event, '#directiveRulesTabTitle', '.main-details')">
-            Target Rules
+            Target rules
           </a>
         </li>
       </ul>
