--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -57,7 +57,7 @@
 }
 .content-wrapper .rudder-template .jstree .jstree-anchor .btn.create{
   float: right;
-  width: 25px;
+  min-width: 25px;
 }
 .content-wrapper .rudder-template .jstree .jstree-anchor:hover .btn.create{
   opacity: 1 !important;
