Fixes #18656: Make group tab name capitalization consistent

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
@@ -53,8 +53,8 @@
     <ul id="groupTabMenu">
       <li><a href="#groupParametersTab">Parameters</a></li>
       <li><a href="#groupCriteriaTab">Criteria</a></li>
-      <li><a href="#groupRulesTab">Related Rules</a></li>
-      <li><a href="#groupPropertiesTab">Group Properties</a></li>
+      <li><a href="#groupRulesTab">Related rules</a></li>
+      <li><a href="#groupPropertiesTab">Group properties</a></li>
     </ul>
   </div>
   <div class="main-details">
